--- a/bank-of-codepath-ui/src/components/App/App.css
+++ b/bank-of-codepath-ui/src/components/App/App.css
@@ -1,12 +1,16 @@
 .App {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  min-height: 100vh;
-  background: rgba(243, 243, 243, 1);
-  width: 100%;
-  max-width: 100vw;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	min-height: 100vh;
+	background: rgba(243, 243, 243, 1);
+	width: 100%;
+	max-width: 100vw;
 }
 .App main {
-  flex: 1;
+	flex: 1;
+}
+
+.App a {
+	text-decoration: none;
 }
